Fix page overflow
Caused by weird margin use in footer container.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -385,8 +385,6 @@ main {
 .footer .container {
     padding-top: 2%;
     padding-bottom: 1%;
-    margin-right: 20%;
-    margin-left: 20%;
 }
 
 .footer .nav-link:hover {
